# CATdesktop

./: .gitattributes  .gitignore  LICENSE.txt  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/: App.vue
src-tauri/: 2  Cargo.toml  access_token.txt  build.rs  google_client.json  settings.json  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_assistant.rs  ai_enrichment.rs  ai_smart_features.rs  ai_speech_to_text.rs  api_utils.rs  auto_login.rs  client_secret_1_99017034100-i04dv1p35v7rmbvjffjro807b8vupeku.apps.googleusercontent.com.json  config.rs  credential_utils.rs  database_sync_service.rs  database_utils.rs  encription_key.rs  encryption_utils.rs  google_oauth.rs  google_sync_service.rs  googlecal.rs  lib.rs  login.rs  main.rs  notification_service.rs  oauth.rs  outlook_oauth.rs  outlook_sync_service.rs  prompt.rs  register.rs  sqlite.rs  sqlite_sync_service.rs  theme_utils.rs  token_utils.rs  updater.rs  user_utils.rs  weather_service.rs  window.rs
src-tauri/wix/: fragment.wxs  license.rtf  main.wxs
src/assets/: base.css  checkbox-slider.css  loginform.css  main.css  outlook-logo.webp~
src/components/: AiAssistant.vue  Calendar.vue  ConflictMessage.vue  DeleteSuggestion.vue  EventSuggestion.vue  Location.vue  Login.vue  MiniAiChat.vue  Notifications.vue  Oauth.vue  Register.vue  SmartFeatures.vue  SpeechToText.vue  Themes.vue  TitleBar.vue  aiAssistant.vue  calendar.vue  deleteSuggestion.vue  googleOauth.vue  location.vue  login.vue  oauth.vue  register.vue  smartFeatures.vue  themes.vue  titleBar.vue
