[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
google-calendar3 = "5.0"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.9"
rusqlite = { version = "0.29.0", features = ["bundled"] }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
open = "5"
dotenvy = "0.15"
urlencoding = "2.1"
mac_address = "1.1.8"
base64 = "0.21"
rand = "0.8" 
aes = "0.8"
aes-gcm = "0.10"
chrono = "0.4"
notify-rust = "4"
auto-launch = "0.5"
uuid = { version = "1.0", features = ["v4"] }
