[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["config-json5"] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
urlencoding = "2.1"
chacha20poly1305 = "0.10.1"
argon2 = "0.5"
base64 = "0.22.1"
rand = "0.9.1"
aes = "0.8"
aes-gcm = "0.10"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rrule = "0.14.0"
futures = "0.3"
regex = "1.10"
jni = "0.21.1"
tauri-plugin-machine-uid = "0.1.1"
tauri-plugin-keystore = "2.1.0-alpha.1"
tauri-plugin-os = "2"
tauri-plugin-biometric = "2.3.0"
once_cell = "1.19"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = { version = "2.5.0", features = ["tray-icon", "config-json5"] } 
notify-rust = "4"
auto-launch = "0.5"
open = "5"
mac_address = "1.1.8"

