[package]
name = "app"
version = "1.2.2"
description = "Calendar Assistant"
authors = ["DomanskiFilip"]
license = "custom"
repository = "https://github.com/DomanskiFilip/CATdesktop/releases/tag/v1.0.0-beta"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Build dependencies for Tauri
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
once_cell = "1.19"

# Database dependencies
rusqlite = { version = "0.29.0", features = ["bundled"] }
dotenvy = "0.15"

# Cryptography dependencies
chacha20poly1305 = "0.10.1"
argon2 = "0.5"
base64 = "0.22.1"
rand = "0.9.1"
aes = "0.8"
aes-gcm = "0.10"
rsa = { version = "0.9.9", features = ["pem"] }
sha2 = "0.10"

# Date and UUID utilities
chrono = "0.4"
uuid = { version = "1.18.0", features = ["v4"] }
keyring = { version = "3.5", features = ["windows-native", "apple-native", "linux-native"] }
whoami = "1.6.1"

# Networking dependencies
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Tauri plugins
tauri = { version = "2.5.0", features = ["config-json5"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-machine-uid = "0.1.1"
tauri-plugin-keystore = "2.1.0-alpha.1"
tauri-plugin-os = "2"
tauri-plugin-biometric = "2.3.0"
tauri-plugin-notification = "2"

# Android-specific dependencies
jni = "0.21.1"

# Recurrence rules
rrule = "0.14.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Desktop-specific dependencies
tauri = { version = "2.5.0", features = ["tray-icon", "config-json5"] }
auto-launch = "0.5"
open = "5"
mac_address = "1.1.8"
